fix cards small font on mobile

--- a/src/assets/sass/blocks/bigCard.scss
+++ b/src/assets/sass/blocks/bigCard.scss
@@ -109,17 +109,13 @@
             font-weight: 400;
             font-size: 16px;
             position:relative;
-            max-height: 50px;
+            max-height: 75px;
 
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
-
-            @media(max-width: 1000px) {
-                font-size: 12px;
-            }
         }
     }
 }
